# harmonize

./: CHANGELOG.md  CONTRIBUTING.md  Cargo.toml  README.md  harmonize.toml.example  pyproject.toml  setup.py
harmonize/: __main__.py  config.py  converter.py  decoders.py  encoders.py  substitute.py  sync.py  transcode.py  transcode_cover.py
src/: config.rs  converter.rs  error.rs  main.rs  substitute.rs  sync.rs
tests/: integration.rs  test_app.py  test_config.py  test_substitute.py  test_sync.py
tests/helpers/: ffmpeg.py  ffmpeg.rs  ffprobe.py  ffprobe.rs
