[package]
name = "harmonize"
version = "2.0.0"
edition = "2024"
description = "Create and synchronize transcoded copies of audio folders"
license = "Apache-2.0"
repository = "https://github.com/andrewrabert/harmonize"

[[bin]]
name = "harmonize"
path = "src/main.rs"

[dependencies]
anyhow = "1"
clap = { version = "4", features = ["derive"] }
filetime = "0.2"
globset = "0.4"
serde = { version = "1", features = ["derive"] }
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
toml = "0.8"
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["fmt"] }

[dev-dependencies]
serde_json = "1"
tempfile = "3"
