[project]
name = "harmonize"
dynamic = ["version"]
description = "Create and synchronize transcoded copies of audio folders"
readme = "README.md"
authors = [
    {name = "Andrew Rabert", email = "ar@nullsum.net"},
]
classifiers = [
    "Development Status :: 4 - Beta",
    "Intended Audience :: End Users/Desktop",
    "License :: OSI Approved :: Apache Software License",
    "Programming Language :: Python :: 3 :: Only",
]
requires-python = ">=3.8"
dependencies = [
    "mutagen>=1.40.0",
]
license = {text = "Apache 2.0"}

[project.urls]
Homepage = "https://github.com/nvllsvm/harmonize"

[project.scripts]
harmonize = "harmonize.__main__:main"

[build-system]
requires = ["hatchling", "hatch-vcs"]
build-backend = "hatchling.build"

[tool.hatch.version]
source = "vcs"

[tool.hatch.build.targets.wheel]
packages = ["harmonize"]

[dependency-groups]
dev = [
    "pytest>=6.0.0",
]

[tool.pytest.ini_options]
testpaths = ["tests"]
python_files = ["test_*.py"]
python_classes = ["Test*"]
python_functions = ["test_*"]